# outline

./: .gitignore  CLAUDE.md  OUTLINE_FEATURES.md  PLAN.md  README.md  dev.sh  import-dynalist.js  install.sh
.beads/: config.yaml  deletions.jsonl  issues.jsonl  sync-state.json
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: benchmarks.html  vanilla-benchmark.html
app/scripts/: import-dynalist.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  watcher.rs
app/src-tauri/src/data/: document.rs  folders.rs  mod.rs  node.rs  operations.rs
app/src-tauri/src/import_export/: json.rs  markdown.rs  mod.rs  opml.rs
app/src-tauri/src/search/: mod.rs
app/static/: react-benchmark.html
app/tests/: basic-editing.spec.ts  bulk-operations.spec.ts  bullet-styles.spec.ts  checkboxes.spec.ts  context-menu.spec.ts  date-picker.spec.ts  date-views-panel.spec.ts  delete-merge.spec.ts  drag-drop.spec.ts  duedate.spec.ts  edit-menu.spec.ts  enter-split.spec.ts  hashtags.spec.ts  hide-completed.spec.ts  hierarchy.spec.ts  hover-controls.spec.ts  keyboard.spec.ts  lazy-rendering.spec.ts  markdown-links.spec.ts  (+18 more)
benchmarks/: data.js  data.json  react-benchmark.html  solid-benchmark.html  vanilla-benchmark.html
docs/: dynalist-replacement-features.md  proposal-react-lexical.md  proposal-solidjs-tiptap.md  tcommand-pattern.md
server/: Gemfile  README.md  app.rb  config.json.example  config.ru  nginx.conf.example
(+93 files in other folders)
